--- a/index.html
+++ b/index.html
@@ -3,9 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title></title>
+    <!--font owsam icon cdn link-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!--link main style.css file-->
+    <link rel="stylesheet" href="css/style.css">
+    <!--responsive style link-->
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body>
-    <h1>hello world</h1>
+    <!--header area design start-->
+    <header id="header">
+        <div class="container">
+            <nav>
+                <div class="logo">
+                    <img src="" alt="logo">
+                    <h2>Happy <span>Travel</span></h2>
+                </div>
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">Packages</a></li>
+                    <li><a href="">Testimonial</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">Contact</a></li>
+                </ul>
+                <div class="menu-bar">
+
+                </div>
+            </nav>
+        </div>
+    </header>
+
+
 </body>
 </html>
