--- a/index.html
+++ b/index.html
@@ -15,24 +15,59 @@
     <!--header area design start-->
     <header id="header">
         <div class="container">
-            <nav>
+            <nav class="nav-area">
                 <div class="logo">
-                    <img src="" alt="logo">
+                    <img src="Images/logo.png" alt="logo">
                     <h2>Happy <span>Travel</span></h2>
                 </div>
-                <ul>
+                <ul class="manu-area">
                     <li><a href="">Home</a></li>
                     <li><a href="">Packages</a></li>
                     <li><a href="">Testimonial</a></li>
                     <li><a href="">Blog</a></li>
                     <li><a href="">Contact</a></li>
                 </ul>
-                <div class="menu-bar">
-
+                <div class="nav-bar">
+                    <span><i class="fa-solid fa-bars"></i></span>
                 </div>
             </nav>
         </div>
     </header>
+
+    <!--hero area design -->
+    <main id="hero">
+        <div class="container">
+            <div class="hero-area">
+                <div class="hero-content">
+                    <h1>Explore Your Travel</h1>
+                    <p>Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio enim ac quis sapien urna eu phasellus.</p>
+                    <div class="input-area">
+                        <form class="input-fild" action="">
+                            <select>
+                                <option value="">Where go</option>
+                                <option value="">dhaka</option>
+                                <option value="">dinajpur</option>
+                            </select>
+                            <select>
+                                <option value="">When</option>
+                                <option value="">january</option>
+                                <option value="">jun</option>
+                                <option value="">december</option>
+                            </select>
+                            <select>
+                                <option value="">Select Type</option>
+                                <option value="">january</option>
+                                <option value="">jun</option>
+                                <option value="">december</option>
+                            </select>
+                            <button><span><i class="fa-solid fa-magnifying-glass"></i></span>Find Now</button>
+                        </form>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </main>
 
 
 </body>
