--- a/index.html
+++ b/index.html
@@ -64,10 +64,36 @@
                         </form>
                     </div>
                 </div>
-
             </div>
         </div>
     </main>
+
+    <!--Popular area design start-->
+    <section id="popular">
+        <div class="container">
+            <div class="popular-are">
+                <div class="popular-cotent">
+                    <h1>Our Popular Tours</h1>
+                    <hr>
+                    <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+                    <ul>
+                        <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at .</li>
+                        <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
+                        <li> Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at in.</li>
+                    </ul>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus 
+                        ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. Id bibendum nunc senectus semper tincidunt. </p>
+                    <button>Read More</button>
+
+                </div>
+                <div class="popular-img">
+                    <img src="Images/popular.png" alt="popular">
+
+                </div>
+            </div>
+
+        </div>
+    </section>
 
 
 </body>
