--- a/index.html
+++ b/index.html
@@ -84,14 +84,152 @@
                     <p>Amet consectetur. Vulputate commodo felis molestie risus 
                         ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. Id bibendum nunc senectus semper tincidunt. </p>
                     <button>Read More</button>
-
                 </div>
                 <div class="popular-img">
                     <img src="Images/popular.png" alt="popular">
+                </div>
+            </div>
+        </div>
+    </section>
 
+    <!--Destination area design start-->
+    <section id="destination">
+        <div class="container">
+            <div class="destination-area">
+                <h1>Choose Your Destination</h1>
+                <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+                <hr>
+                <div class="destination-images">
+                    <div class="top-img">
+                        <div class="top-1">
+                            <img src="Images/d1.png" alt="d1">
+                            <h2>Maldives</h2>
+                        </div>
+                        <div class="top-2">
+                            <img src="Images/d2.png" alt="d1">
+                            <h2>Indonesia</h2>
+                        </div>
+                    </div>
+                    <div class="center-img">
+                        <img src="Images/d3.png" alt="d3">
+                        <img src="Images/d4.png" alt="d4">
+                        <img src="Images/d5.png" alt="d5">
+                    </div>
+                    <div class="bottom-img">
+                        <img src="Images/d6.png" alt="d6">
+                        <img src="Images/d7.png" alt="d7">
+                    </div>
                 </div>
             </div>
 
+        </div>
+    </section>
+
+    <!--Choose area design start-->
+    <section id="choose">
+        <div class="container">
+            <div class="choose-area">
+                <h1>Why Choose Us</h1>
+                <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+                <hr>
+                <div class="choose-cards">
+                    <div class="card hotel-background">
+                        <img src="icon/hotel 1.svg" alt="hotel">
+                          <h3>Handpicked Hotels</h3>
+                          <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                    </div>
+                    <div class="card map-background">
+                        <img src="icon/map 1.svg" alt="map">
+                          <h3>World Class Service</h3>
+                          <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                    </div>
+                    <div class="card price-background">
+                        <img src="icon/price-tag 1.svg" alt="price">
+                          <h3>Best Price Guarantee</h3>
+                          <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet.  </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--Discounts area design start-->
+    <section id="discounts">
+        <div class="container">
+            <div class="discounts-area">
+                <h1>Deals & Discounts</h1>
+                <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+                <hr>
+                <div class="disounts-cards">
+                    <div class="discount-card">
+                        <div class="discount-content">
+                            <ul>
+                                <li><span></span>7 Day / 6 Night</li>
+                                <li><span>i</span>Max : 10</li>
+                                <li><span><i class="fa-solid fa-location-dot"></i></span>Malaysia</li>
+                            </ul>
+                            <h3>Tour To Satorini</h3>
+                            <p>Amet consectetur. Vulputate commodo felis 
+                                molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing.</p>
+                                <h4 class="card-price">Price: $1300-$1500</h4>
+                                <button>Book Now</button>
+                        </div>
+                    </div>
+
+                    <div class="discount-card2">
+                        <div class="discount-content card-2">
+                            <ul>
+                                <li><span></span>7 Day / 6 Night</li>
+                                <li><span>i</span>Max : 10</li>
+                                <li><span><i class="fa-solid fa-location-dot"></i></span>Malaysia</li>
+                            </ul>
+                            <h3>Tour To Satorini</h3>
+                            <p>Amet consectetur. Vulputate commodo felis 
+                                molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing.</p>
+                                <h4 class="card-price">Price: $1300-$1500</h4>
+                                <button>Book Now</button>
+                        </div>
+    
+                    </div>
+
+                    <div class="discount-card">
+                        <div class="discount-content">
+                            <ul>
+                                <li><span></span>7 Day / 6 Night</li>
+                                <li><span>i</span>Max : 10</li>
+                                <li><span><i class="fa-solid fa-location-dot"></i></span>Malaysia</li>
+                            </ul>
+                            <h3>Tour To Satorini</h3>
+                            <p>Amet consectetur. Vulputate commodo felis 
+                                molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing.</p>
+                                <h4 class="card-price">Price: $1300-$1500</h4>
+                                <button>Book Now</button>
+                        </div>
+    
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--Place area design start-->
+    <section id="place">
+        <div class="container">
+            <div class="place-area">
+                <div class="place-content">
+                    <h1>A Simple Perfect Place To Get Lost</h1>
+                    <p>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. </p>
+                    <ul>
+                        <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
+                        <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
+                    </ul>
+                    <button>See More</button>
+                </div>
+                <div class="place-video">
+                    <img src="Images/video-img.png" alt="place-video">
+                </div>
+
+            </div>
         </div>
     </section>
 
