--- a/index.html
+++ b/index.html
@@ -233,6 +233,59 @@
         </div>
     </section>
 
+    <!--news area design start-->
+    <section id="news">
+        <div class="container">
+            <div class="news-area">
+                <div class="news-singin-area">
+                    <h1>Newsletter</h1>
+                    <p>Get your daily dose of travel news & tips. Sign up today!</p>
+                    <form action=""> 
+                        <input type="text" name="" placeholder="Enter your name" required id="">
+                        <input type="email" name="" placeholder="Enter your email" required id="">
+                        <button type="submit">Subscribe</button>
+                    </form>
+                </div>
+
+                <div class="news-img">
+                    <div class="news-content">
+                        <h3>Travel</h3>
+                        <h1>Save up to 70%</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--choose your location-->
+    <section id="location">
+        <div class="container">
+            <div class="location-area">
+                <h1>Choose your location</h1>
+                <p>Lorem ipsum dolor sit amet.</p>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d50865.594557160155!2d88.46304989999999!3d26.025697500000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2sbd!4v1705383834139!5m2!1sen!2sbd" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+
+    <!--footer area design start-->
+    <footer id="footer">
+        <div class="footer-logo">
+            <div class="logo-footer">
+                <img src="/Images/logo.png" alt="logo">
+                <h2>Happy <span>Travel</span></h2>
+            </div>
+            <p>Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. </p>
+            <ul>
+                <li><i class="fa-brands fa-facebook"></i></li>
+                <li><i class="fa-brands fa-twitter"></i></li>
+                <li><i class="fa-brands fa-github"></i></li>
+                <li><i class="fa-brands fa-linkedin"></i></li>
+            </ul>
+            <hr>
+            <p>2017, All Rights Reserved.</p>
+        </div>
+    </footer>
+
 
 </body>
 </html>
