--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         <div class="container">
             <div class="location-area">
                 <h1>Choose your location</h1>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <p>where do you want to go</p>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d50865.594557160155!2d88.46304989999999!3d26.025697500000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2sbd!4v1705383834139!5m2!1sen!2sbd" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
