--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             <div class="hero-area">
                 <div class="hero-content">
                     <h1>Explore Your Travel</h1>
-                    <p>Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio enim ac quis sapien urna eu phasellus.</p>
+                    <p>Choosing a destination for your most awesome trip
+                        How to plan a trip for an extraordinary experience
+                    </p>
                     <div class="input-area">
                         <form class="input-fild" action="">
                             <select>
@@ -75,7 +77,7 @@
                 <div class="popular-cotent">
                     <h1>Our Popular Tours</h1>
                     <hr>
-                    <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+                    <p>If youre ready to inspire whats next for your students, this is the perfect place to start. The itineraries in this travel collection are chosen time and time again</p>
                     <ul>
                         <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis erat at .</li>
                         <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
@@ -97,23 +99,43 @@
         <div class="container">
             <div class="destination-area">
                 <h1>Choose Your Destination</h1>
-                <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+                <p>How do you choose a destination for your next trip? Discover insightful and even surprising tips to determine where to go on your next trip.</p>
                 <hr>
                 <div class="destination-images">
-                    <div class="top-img">
-                        <div class="top-1">
+                    <div class="top-imgs">
+                        <div class="top-img">
                             <img src="Images/d1.png" alt="d1">
-                            <h2>Maldives</h2>
+                            <div class="top-img-text">
+                                <h1>Maldives</h1>
+                            </div>
                         </div>
-                        <div class="top-2">
+                        <div class="top-img">
                             <img src="Images/d2.png" alt="d1">
-                            <h2>Indonesia</h2>
+                            <div class="top-img-text">
+                                <h1>Indonesia</h1>
+                            </div>
                         </div>
                     </div>
-                    <div class="center-img">
-                        <img src="Images/d3.png" alt="d3">
-                        <img src="Images/d4.png" alt="d4">
-                        <img src="Images/d5.png" alt="d5">
+                    <div class="center-imgs">
+                        <div class="center-img">
+                            <img src="Images/d3.png" alt="d1">
+                            <div class="center-img-text">
+                                <h1>Maldives</h1>
+                            </div>
+                        </div>
+                        <div class="center-img">
+                            <img src="Images/d4.png" alt="d1">
+                            <div class="center-img-text">
+                                <h1>Maldives</h1>
+                            </div>
+                        </div>
+                        <div class="center-img">
+                            <img src="Images/d5.png" alt="d1">
+                            <div class="center-img-text">
+                                <h1>Maldives</h1>
+                            </div>
+                        </div>
+                        
                     </div>
                     <div class="bottom-img">
                         <img src="Images/d6.png" alt="d6">
