--- a/index.html
+++ b/index.html
@@ -120,26 +120,36 @@
                         <div class="center-img">
                             <img src="Images/d3.png" alt="d1">
                             <div class="center-img-text">
-                                <h1>Maldives</h1>
+                                <h1>Srilanka</h1>
                             </div>
                         </div>
                         <div class="center-img">
                             <img src="Images/d4.png" alt="d1">
                             <div class="center-img-text">
-                                <h1>Maldives</h1>
+                                <h1>North America</h1>
                             </div>
                         </div>
                         <div class="center-img">
                             <img src="Images/d5.png" alt="d1">
                             <div class="center-img-text">
-                                <h1>Maldives</h1>
+                                <h1>Kashmir</h1>
                             </div>
                         </div>
                         
                     </div>
-                    <div class="bottom-img">
-                        <img src="Images/d6.png" alt="d6">
-                        <img src="Images/d7.png" alt="d7">
+                    <div class="bottom-imgs">
+                        <div class="bottom-img">
+                            <img src="Images/d6.png" alt="d6">
+                            <div class="bottom-text">
+                                <h1>Bangladesh</h1>
+                            </div>
+                        </div>
+                        <div class="bottom-img">
+                            <img src="Images/d7.png" alt="d7">
+                            <div class="bottom-text">
+                                <h1>Bandarban</h1>
+                            </div>
+                        </div>     
                     </div>
                 </div>
             </div>
