responsive css add

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <h2>Happy <span>Travel</span></h2>
                 </div>
                 <ul class="manu-area">
-                    <li><a href="">Home</a></li>
+                    <li class=""><a class="active" href="">Home</a></li>
                     <li><a href="">Packages</a></li>
                     <li><a href="">Testimonial</a></li>
                     <li><a href="">Blog</a></li>
@@ -303,7 +303,7 @@
     <footer id="footer">
         <div class="footer-logo">
             <div class="logo-footer">
-                <img src="/Images/logo.png" alt="logo">
+                <img src="Images/logo.png" alt="logo">
                 <h2>Happy <span>Travel</span></h2>
             </div>
             <p>Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. </p>
