more responsive code add

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <div class="container">
             <div class="choose-area">
                 <h1>Why Choose Us</h1>
-                <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+                <p>Find Hotel Booking Without Payment at Shopwebly, the Website to Compare Prices! Find and Compare Hotel Booking Without Payment Online. Save Now at Shopwebly! Many Products.</p>
                 <hr>
                 <div class="choose-cards">
                     <div class="card hotel-background">
@@ -196,8 +196,8 @@
                     <div class="discount-card">
                         <div class="discount-content">
                             <ul>
-                                <li><span></span>7 Day / 6 Night</li>
-                                <li><span>i</span>Max : 10</li>
+                                <li><span><i class="fa-solid fa-clock"></i></span>7 Day / 6 Night</li>
+                                <li><span><i class="fa-solid fa-user-group"></i></span>Max : 10</li>
                                 <li><span><i class="fa-solid fa-location-dot"></i></span>Malaysia</li>
                             </ul>
                             <h3>Tour To Satorini</h3>
@@ -211,8 +211,8 @@
                     <div class="discount-card2">
                         <div class="discount-content card-2">
                             <ul>
-                                <li><span></span>7 Day / 6 Night</li>
-                                <li><span>i</span>Max : 10</li>
+                                <li><span><i class="fa-solid fa-clock"></i></span>7 Day / 6 Night</li>
+                                <li><span><i class="fa-solid fa-user-group"></i></span>Max : 10</li>
                                 <li><span><i class="fa-solid fa-location-dot"></i></span>Malaysia</li>
                             </ul>
                             <h3>Tour To Satorini</h3>
@@ -227,8 +227,8 @@
                     <div class="discount-card">
                         <div class="discount-content">
                             <ul>
-                                <li><span></span>7 Day / 6 Night</li>
-                                <li><span>i</span>Max : 10</li>
+                                <li><span><i class="fa-solid fa-clock"></i></span>7 Day / 6 Night</li>
+                                <li><span><i class="fa-solid fa-user-group"></i></span>Max : 10</li>
                                 <li><span><i class="fa-solid fa-location-dot"></i></span>Malaysia</li>
                             </ul>
                             <h3>Tour To Satorini</h3>
@@ -258,7 +258,10 @@
                     <button>See More</button>
                 </div>
                 <div class="place-video">
-                    <img src="Images/video-img.png" alt="place-video">
+                    <video autoplay loop src="video/trip-vide.mp4"></video>
+                    <div class="video-text">
+                        <h1>HELLO</h1>
+                    </div>
                 </div>
 
             </div>
@@ -306,7 +309,7 @@
                 <img src="Images/logo.png" alt="logo">
                 <h2>Happy <span>Travel</span></h2>
             </div>
-            <p>Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. Leo erat maecenas vitae elementum ultricies nullam. </p>
+            <p>For my part, I travel not to go anywhere, but to go. I travel for travel's sake. The great affair is to move </p>
             <ul>
                 <li><i class="fa-brands fa-facebook"></i></li>
                 <li><i class="fa-brands fa-twitter"></i></li>
@@ -314,7 +317,7 @@
                 <li><i class="fa-brands fa-linkedin"></i></li>
             </ul>
             <hr>
-            <p>2017, All Rights Reserved.</p>
+            <p>2024, All Rights Reserved.</p>
         </div>
     </footer>
 
