--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         <div class="container">
             <div class="discounts-area">
                 <h1>Deals & Discounts</h1>
-                <p>Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
+                <p> amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales dictumst nec nibh pellentesque.</p>
                 <hr>
                 <div class="disounts-cards">
                     <div class="discount-card">
