--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                     <button>See More</button>
                 </div>
                 <div class="place-video">
-                    <video autoplay loop src="video/trip-vide.mp4"></video>
+                    <video autoplay controls loop src="video/trip-vide.mp4"></video>
                     <div class="video-text">
                         <h1>HELLO</h1>
                     </div>
@@ -320,7 +320,5 @@
             <p>2024, All Rights Reserved.</p>
         </div>
     </footer>
-
-
 </body>
 </html>
